--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -77,6 +77,13 @@ elasticsearch_index_indexing_slowlog_threshold_index_warn: ~   # 10s
 elasticsearch_index_indexing_slowlog_threshold_index_info: ~   # 5s
 elasticsearch_index_indexing_slowlog_threshold_index_debug: ~  # 2s
 elasticsearch_index_indexing_slowlog_threshold_index_trace: ~  # 500ms
+elasticsearch_index_translog_flush_threshold_size: ~ # 512mb
+elasticsearch_index_translog_flush_threshold_ops: ~ # unlimited
+elasticsearch_index_translog_flush_threshold_period: ~ # 30m
+elasticsearch_index_translog_interval: ~ # 5s
+elasticsearch_index_translog_sync_interval: ~ # 5s
+elasticsearch_index_translog_durability: ~ # request
+elasticsearch_index_translog_fs_type: ~ # buffered
 
 monitor_jvm_gc_young_warn: ~   # 1000ms
 monitor_jvm_gc_young_info: ~   # 700ms
